--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   </head>
   <body>
     <div class="wrapper">
-      <form action="" class="timer">
+      <form class="timer" onsubmit="app.submit()">
         <div class="info">
           Установить медитацию на
           <input type="number" name="time" aria-label="Число минут до медитации" value="10">
